<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View" />

        <variable name="viewModel" type="com.example.rio.kottlin_demo.ui.register.RegisterViewModel"/>

    </data>

    <RelativeLayout
            android:id="@+id/rl_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login"
            tools:context=".ui.register.RegisterActivity">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:orientation="vertical">


                <TextView
                        style="@style/TextStyle.Heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:text="@string/register"
                        android:textColor="@color/extraColor"
                        android:textAllCaps="true"
                        android:textSize="20sp"/>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        android:layout_marginBottom="@dimen/_15sdp"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_phone"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:singleLine="true"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:enabled="@{viewModel.registerViewData.isEnabledEtPhone}"
                            android:gravity="center|left|bottom"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp"
                            android:afterTextChanged="@{(value) -> viewModel.updatePhone(value)}" />

                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/btn_get_verify_code"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="@{()->viewModel.onGetVerifyCodeClick()}"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:visibility="@{viewModel.registerViewData.isVisibilityBtnGetCode ? View.VISIBLE : View.GONE}"
                        android:background="@drawable/bg_corner_5dps_red"
                        android:text="@string/get_verify_code"
                        android:textSize="18dp"/>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        android:visibility="@{viewModel.registerViewData.isVisibilityEtCode ? View.VISIBLE : View.GONE}"
                        android:layout_marginBottom="@dimen/_15sdp"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_code"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:singleLine="true"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/input_code"
                            android:inputType="number"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/btn_check_code"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.registerViewData.isVisibilityBtnCheckCode ? View.VISIBLE : View.GONE}"
                        android:layout_gravity="center"
                        android:onClick="@{()->viewModel.onCheckCodeClick()}"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:background="@drawable/bg_corner_5dps_red"
                        android:text="@string/check_code"
                        android:textSize="18dp"/>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:visibility="@{viewModel.registerViewData.isVisibilityEtNameCode ? View.VISIBLE : View.GONE}"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_name"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/name"
                            android:maxLength="100"
                            android:singleLine="true"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.registerViewData.isVisibilityEtPassCode ? View.VISIBLE : View.GONE}"
                        android:textColorHint="@color/gray"
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                        app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:hint="@string/password"
                            android:layout_marginTop="10dp"
                            android:singleLine="true"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/btn_register"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:visibility="@{viewModel.registerViewData.isVisibilityBtnRegister ? View.VISIBLE : View.GONE}"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="@{()->viewModel.onRegisterClick()}"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:background="@drawable/bg_corner_5dps_red"
                        android:text="@string/register"
                        android:textSize="18dp"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</layout>